--- a/CTS_Analytics/Views/Mnemonic/index.cshtml
+++ b/CTS_Analytics/Views/Mnemonic/index.cshtml
@@ -16,26 +16,26 @@
 			<div class="text">
 				<div class="line">
 					<span class="name">@Resources.ResourceMnemonic.ProdPlan</span>
-					<div class="count">@Model.Shah.ProdPlan</div>
+					<div class="count">@Model.Shah.ProdPlan.ToString("N0", System.Globalization.CultureInfo.CurrentCulture)</div>
 					<span class="caption">@Resources.ResourceMnemonic.Tonns</span>
 					<div class="clearfix"></div>
 				</div>
 				<div class="line">
 					<span class="name">@Resources.ResourceMnemonic.ProdFact</span>
-					<div class="count">@Model.Shah.ProdFact</div>
+					<div class="count">@Model.Shah.ProdFact.ToString("N0", System.Globalization.CultureInfo.CurrentCulture)</div>
 					<span class="caption">@Resources.ResourceMnemonic.Tonns</span>
 					<div class="clearfix"></div>
 				</div>
 				<div class="line">
 					<span class="name">@Resources.ResourceMnemonic.Shipped</span>
-					<div class="count">@Model.Shah.Shipped</div>
+					<div class="count">@Model.Shah.Shipped.ToString("N0", System.Globalization.CultureInfo.CurrentCulture)</div>
 					<span class="caption">@Resources.ResourceMnemonic.Tonns</span>
 					<div class="clearfix"></div>
 				</div>
 				<div class="line">
 					<span class="name">@Resources.ResourceMnemonic.AtStockPiles</span>
 					<div class="count">@if (Model.Shah.AtStockpile > 0)
-					{@Model.Shah.AtStockpile }
+					{@Model.Shah.AtStockpile.ToString("N0", System.Globalization.CultureInfo.CurrentCulture) }
 				else
 				{ <span>0</span>}</div>
 					<span class="caption">@Resources.ResourceMnemonic.Tonns</span>
@@ -81,26 +81,26 @@
 			<div class="text">
 				<div class="line">
 					<span class="name">@Resources.ResourceMnemonic.ProdPlan</span>
-					<div class="count">@Model.Tent.ProdPlan</div>
+					<div class="count">@Model.Tent.ProdPlan.ToString("N0", System.Globalization.CultureInfo.CurrentCulture)</div>
 					<span class="caption">@Resources.ResourceMnemonic.Tonns</span>
 					<div class="clearfix"></div>
 				</div>
 				<div class="line">
 					<span class="name">@Resources.ResourceMnemonic.ProdFact</span>
-					<div class="count">@Model.Tent.ProdFact</div>
+					<div class="count">@Model.Tent.ProdFact.ToString("N0", System.Globalization.CultureInfo.CurrentCulture)</div>
 					<span class="caption">@Resources.ResourceMnemonic.Tonns</span>
 					<div class="clearfix"></div>
 				</div>
 				<div class="line">
 					<span class="name">@Resources.ResourceMnemonic.Shipped</span>
-					<div class="count">@Model.Tent.Shipped</div>
+					<div class="count">@Model.Tent.Shipped.ToString("N0", System.Globalization.CultureInfo.CurrentCulture)</div>
 					<span class="caption">@Resources.ResourceMnemonic.Tonns</span>
 					<div class="clearfix"></div>
 				</div>
 				<div class="line">
 					<span class="name">@Resources.ResourceMnemonic.AtStockPiles</span>
 					<div class="count">@if (Model.Tent.AtStockpile > 0)
-					{@Model.Tent.AtStockpile }
+					{@Model.Tent.AtStockpile.ToString("N0", System.Globalization.CultureInfo.CurrentCulture) }
 				else
 				{ <span>0</span>}</div>
 					<span class="caption">@Resources.ResourceMnemonic.Tonns</span>
@@ -143,26 +143,26 @@
 			<div class="text">
 				<div class="line">
 					<span class="name">@Resources.ResourceMnemonic.ProdPlan</span>
-					<div class="count">@Model.Len.ProdPlan</div>
+					<div class="count">@Model.Len.ProdPlan.ToString("N0", System.Globalization.CultureInfo.CurrentCulture)</div>
 					<span class="caption">@Resources.ResourceMnemonic.Tonns</span>
 					<div class="clearfix"></div>
 				</div>
 				<div class="line">
 					<span class="name">@Resources.ResourceMnemonic.ProdFact</span>
-					<div class="count">@Model.Len.ProdFact</div>
+					<div class="count">@Model.Len.ProdFact.ToString("N0", System.Globalization.CultureInfo.CurrentCulture)</div>
 					<span class="caption">@Resources.ResourceMnemonic.Tonns</span>
 					<div class="clearfix"></div>
 				</div>
 				<div class="line">
 					<span class="name">@Resources.ResourceMnemonic.Shipped</span>
-					<div class="count">@Model.Len.Shipped</div>
+					<div class="count">@Model.Len.Shipped.ToString("N0", System.Globalization.CultureInfo.CurrentCulture)</div>
 					<span class="caption">@Resources.ResourceMnemonic.Tonns</span>
 					<div class="clearfix"></div>
 				</div>
 				<div class="line">
 					<span class="name">@Resources.ResourceMnemonic.AtStockPiles</span>
 					<div class="count">@if (Model.Len.AtStockpile > 0)
-					{@Model.Len.AtStockpile }
+					{@Model.Len.AtStockpile.ToString("N0", System.Globalization.CultureInfo.CurrentCulture) }
 				else
 				{ <span>0</span>}</div>
 					<span class="caption">@Resources.ResourceMnemonic.Tonns</span>
@@ -205,26 +205,26 @@
 			<div class="text">
 				<div class="line">
 					<span class="name">@Resources.ResourceMnemonic.ProdPlan</span>
-					<div class="count">@Model.Kaz.ProdPlan</div>
+					<div class="count">@Model.Kaz.ProdPlan.ToString("N0", System.Globalization.CultureInfo.CurrentCulture)</div>
 					<span class="caption">@Resources.ResourceMnemonic.Tonns</span>
 					<div class="clearfix"></div>
 				</div>
 				<div class="line">
 					<span class="name">@Resources.ResourceMnemonic.ProdFact</span>
-					<div class="count">@Model.Kaz.ProdFact</div>
+					<div class="count">@Model.Kaz.ProdFact.ToString("N0", System.Globalization.CultureInfo.CurrentCulture)</div>
 					<span class="caption">@Resources.ResourceMnemonic.Tonns</span>
 					<div class="clearfix"></div>
 				</div>
 				<div class="line">
 					<span class="name">@Resources.ResourceMnemonic.Shipped</span>
-					<div class="count">@Model.Kaz.Shipped</div>
+					<div class="count">@Model.Kaz.Shipped.ToString("N0", System.Globalization.CultureInfo.CurrentCulture)</div>
 					<span class="caption">@Resources.ResourceMnemonic.Tonns</span>
 					<div class="clearfix"></div>
 				</div>
 				<div class="line">
 					<span class="name">@Resources.ResourceMnemonic.AtStockPiles</span>
 					<div class="count">@if (Model.Kaz.AtStockpile > 0)
-					{@Model.Kaz.AtStockpile }
+					{@Model.Kaz.AtStockpile.ToString("N0", System.Globalization.CultureInfo.CurrentCulture) }
 				else
 				{ <span>0</span>}</div>
 					<span class="caption">@Resources.ResourceMnemonic.Tonns</span>
@@ -270,26 +270,26 @@
 			<div class="text">
 				<div class="line">
 					<span class="name">@Resources.ResourceMnemonic.ProdPlan</span>
-					<div class="count">@Model.Abay.ProdPlan</div>
+					<div class="count">@Model.Abay.ProdPlan.ToString("N0", System.Globalization.CultureInfo.CurrentCulture)</div>
 					<span class="caption">@Resources.ResourceMnemonic.Tonns</span>
 					<div class="clearfix"></div>
 				</div>
 				<div class="line">
 					<span class="name">@Resources.ResourceMnemonic.ProdFact</span>
-					<div class="count">@Model.Abay.ProdFact</div>
+					<div class="count">@Model.Abay.ProdFact.ToString("N0", System.Globalization.CultureInfo.CurrentCulture)</div>
 					<span class="caption">@Resources.ResourceMnemonic.Tonns</span>
 					<div class="clearfix"></div>
 				</div>
 				<div class="line">
 					<span class="name">@Resources.ResourceMnemonic.Shipped</span>
-					<div class="count">@Model.Abay.Shipped</div>
+					<div class="count">@Model.Abay.Shipped.ToString("N0", System.Globalization.CultureInfo.CurrentCulture)</div>
 					<span class="caption">@Resources.ResourceMnemonic.Tonns</span>
 					<div class="clearfix"></div>
 				</div>
 				<div class="line">
 					<span class="name">@Resources.ResourceMnemonic.AtStockPiles</span>
 					<div class="count">@if (Model.Abay.AtStockpile > 0)
-					{@Model.Abay.AtStockpile }
+					{@Model.Abay.AtStockpile.ToString("N0", System.Globalization.CultureInfo.CurrentCulture) }
 				else
 				{ <span>0</span>}</div>
 					<span class="caption">@Resources.ResourceMnemonic.Tonns</span>
@@ -342,19 +342,19 @@
 			<div class="text">
 				<div class="line">
 					<span class="name">@Resources.ResourceMnemonic.ProdPlan</span>
-					<div class="count">@Model.COF.ProdPlan</div>
+					<div class="count">@Model.COF.ProdPlan.ToString("N0", System.Globalization.CultureInfo.CurrentCulture)</div>
 					<span class="caption">@Resources.ResourceMnemonic.Tonns</span>
 					<div class="clearfix"></div>
 				</div>
 				<div class="line">
 					<span class="name">@Resources.ResourceMnemonic.ProdFact</span>
-					<div class="count">@Model.COF.ProdFact</div>
+					<div class="count">@Model.COF.ProdFact.ToString("N0", System.Globalization.CultureInfo.CurrentCulture)</div>
 					<span class="caption">@Resources.ResourceMnemonic.Tonns</span>
 					<div class="clearfix"></div>
 				</div>
 				<div class="line">
 					<span class="name">@Resources.ResourceMnemonic.Shipped</span>
-					<div class="count">@Model.COF.Shipped</div>
+					<div class="count">@Model.COF.Shipped.ToString("N0", System.Globalization.CultureInfo.CurrentCulture)</div>
 					<span class="caption">@Resources.ResourceMnemonic.Tonns</span>
 					<div class="clearfix"></div>
 				</div>
@@ -400,13 +400,13 @@
 
 				<div class="line">
 					<span class="name">@Resources.ResourceMnemonic.StationIncome</span>
-					<div class="count">@Model.StDubov.Income</div>
+					<div class="count">@Model.StDubov.Income.ToString("N0", System.Globalization.CultureInfo.CurrentCulture)</div>
 					<span class="caption">@Resources.ResourceMnemonic.Tonns</span>
 					<div class="clearfix"></div>
 				</div>
 				<div class="line">
 					<span class="name">@Resources.ResourceMnemonic.Shipped</span>
-					<div class="count">@Model.StDubov.Outcome</div>
+					<div class="count">@Model.StDubov.Outcome.ToString("N0", System.Globalization.CultureInfo.CurrentCulture)</div>
 					<span class="caption">@Resources.ResourceMnemonic.Tonns</span>
 					<div class="clearfix"></div>
 				</div>
@@ -448,13 +448,13 @@
 
 				<div class="line">
 					<span class="name">@Resources.ResourceMnemonic.StationIncome</span>
-					<div class="count">@Model.StAbay.Income</div>
+					<div class="count">@Model.StAbay.Income.ToString("N0", System.Globalization.CultureInfo.CurrentCulture)</div>
 					<span class="caption">@Resources.ResourceMnemonic.Tonns</span>
 					<div class="clearfix"></div>
 				</div>
 				<div class="line">
 					<span class="name">@Resources.ResourceMnemonic.Shipped</span>
-					<div class="count">@Model.StAbay.Outcome</div>
+					<div class="count">@Model.StAbay.Outcome.ToString("N0", System.Globalization.CultureInfo.CurrentCulture)</div>
 					<span class="caption">@Resources.ResourceMnemonic.Tonns</span>
 					<div class="clearfix"></div>
 				</div>
@@ -499,13 +499,13 @@
 
 				<div class="line">
 					<span class="name">@Resources.ResourceMnemonic.StationIncome</span>
-					<div class="count">@Model.StUgler.Income</div>
+					<div class="count">@Model.StUgler.Income.ToString("N0", System.Globalization.CultureInfo.CurrentCulture)</div>
 					<span class="caption">@Resources.ResourceMnemonic.Tonns</span>
 					<div class="clearfix"></div>
 				</div>
 				<div class="line">
 					<span class="name">@Resources.ResourceMnemonic.Shipped</span>
-					<div class="count">@Model.StUgler.Outcome</div>
+					<div class="count">@Model.StUgler.Outcome.ToString("N0", System.Globalization.CultureInfo.CurrentCulture)</div>
 					<span class="caption">@Resources.ResourceMnemonic.Tonns</span>
 					<div class="clearfix"></div>
 				</div>
@@ -547,13 +547,13 @@
 
 				<div class="line">
 					<span class="name">@Resources.ResourceMnemonic.StationIncome</span>
-					<div class="count">@Model.StRaspor.Income</div>
+					<div class="count">@Model.StRaspor.Income.ToString("N0", System.Globalization.CultureInfo.CurrentCulture)</div>
 					<span class="caption">@Resources.ResourceMnemonic.Tonns</span>
 					<div class="clearfix"></div>
 				</div>
 				<div class="line">
 					<span class="name">@Resources.ResourceMnemonic.Shipped</span>
-					<div class="count">@Model.StRaspor.Outcome</div>
+					<div class="count">@Model.StRaspor.Outcome.ToString("N0", System.Globalization.CultureInfo.CurrentCulture)</div>
 					<span class="caption">@Resources.ResourceMnemonic.Tonns</span>
 					<div class="clearfix"></div>
 				</div>
@@ -594,26 +594,26 @@
 			<div class="text">
 				<div class="line">
 					<span class="name">@Resources.ResourceMnemonic.ProdPlan</span>
-					<div class="count">@Model.Kost.ProdPlan</div>
+					<div class="count">@Model.Kost.ProdPlan.ToString("N0", System.Globalization.CultureInfo.CurrentCulture)</div>
 					<span class="caption">@Resources.ResourceMnemonic.Tonns</span>
 					<div class="clearfix"></div>
 				</div>
 				<div class="line">
 					<span class="name">@Resources.ResourceMnemonic.ProdFact</span>
-					<div class="count">@Model.Kost.ProdFact</div>
+					<div class="count">@Model.Kost.ProdFact.ToString("N0", System.Globalization.CultureInfo.CurrentCulture)</div>
 					<span class="caption">@Resources.ResourceMnemonic.Tonns</span>
 					<div class="clearfix"></div>
 				</div>
 				<div class="line">
 					<span class="name">@Resources.ResourceMnemonic.Shipped</span>
-					<div class="count">@Model.Kost.Shipped</div>
+					<div class="count">@Model.Kost.Shipped.ToString("N0", System.Globalization.CultureInfo.CurrentCulture)</div>
 					<span class="caption">@Resources.ResourceMnemonic.Tonns</span>
 					<div class="clearfix"></div>
 				</div>
 				<div class="line">
 					<span class="name">@Resources.ResourceMnemonic.AtStockPiles</span>
 					<div class="count">@if (Model.Kost.AtStockpile > 0)
-					{@Model.Kost.AtStockpile }
+					{@Model.Kost.AtStockpile.ToString("N0", System.Globalization.CultureInfo.CurrentCulture) }
 				else
 				{ <span>0</span>}</div>
 					<span class="caption">@Resources.ResourceMnemonic.Tonns</span>
@@ -657,26 +657,26 @@
 			<div class="text">
 				<div class="line">
 					<span class="name">@Resources.ResourceMnemonic.ProdPlan</span>
-					<div class="count">@Model.Kuz.ProdPlan</div>
+					<div class="count">@Model.Kuz.ProdPlan.ToString("N0", System.Globalization.CultureInfo.CurrentCulture)</div>
 					<span class="caption">@Resources.ResourceMnemonic.Tonns</span>
 					<div class="clearfix"></div>
 				</div>
 				<div class="line">
 					<span class="name">@Resources.ResourceMnemonic.ProdFact</span>
-					<div class="count">@Model.Kuz.ProdFact</div>
+					<div class="count">@Model.Kuz.ProdFact.ToString("N0", System.Globalization.CultureInfo.CurrentCulture)</div>
 					<span class="caption">@Resources.ResourceMnemonic.Tonns</span>
 					<div class="clearfix"></div>
 				</div>
 				<div class="line">
 					<span class="name">@Resources.ResourceMnemonic.Shipped</span>
-					<div class="count">@Model.Kuz.Shipped</div>
+					<div class="count">@Model.Kuz.Shipped.ToString("N0", System.Globalization.CultureInfo.CurrentCulture)</div>
 					<span class="caption">@Resources.ResourceMnemonic.Tonns</span>
 					<div class="clearfix"></div>
 				</div>
 				<div class="line">
 					<span class="name">@Resources.ResourceMnemonic.AtStockPiles</span>
 					<div class="count">@if (Model.Kuz.AtStockpile > 0)
-					{@Model.Kuz.AtStockpile }
+					{@Model.Kuz.AtStockpile.ToString("N0", System.Globalization.CultureInfo.CurrentCulture) }
 				else
 				{ <span>0</span>}</div>
 					<span class="caption">@Resources.ResourceMnemonic.Tonns</span>
@@ -721,13 +721,13 @@
 			<div class="text">
 				<div class="line">
 					<span class="name">@Resources.ResourceMnemonic.ProdPlan</span>
-					<div class="count">@Model.Sar3.ProdPlan</div>
+					<div class="count">@Model.Sar3.ProdPlan.ToString("N0", System.Globalization.CultureInfo.CurrentCulture)</div>
 					<span class="caption">@Resources.ResourceMnemonic.Tonns</span>
 					<div class="clearfix"></div>
 				</div>
 				<div class="line">
 					<span class="name">@Resources.ResourceMnemonic.ProdFact</span>
-					<div class="count">@Model.Sar3.ProdFact</div>
+					<div class="count">@Model.Sar3.ProdFact.ToString("N0", System.Globalization.CultureInfo.CurrentCulture)</div>
 					<span class="caption">@Resources.ResourceMnemonic.Tonns</span>
 					<div class="clearfix"></div>
 				</div>
@@ -740,7 +740,7 @@
 				<div class="line">
 					<span class="name">@Resources.ResourceMnemonic.AtStockPiles</span>
 					<div class="count">@if (Model.Sar3.AtStockpile > 0)
-					{@Model.Sar3.AtStockpile }
+					{@Model.Sar3.AtStockpile.ToString("N0", System.Globalization.CultureInfo.CurrentCulture) }
 				else
 				{ <span>0</span>}</div>
 					<span class="caption">@Resources.ResourceMnemonic.Tonns</span>
@@ -782,26 +782,26 @@
 			<div class="text">
 				<div class="line">
 					<span class="name">@Resources.ResourceMnemonic.ProdPlan</span>
-					<div class="count">@Model.Sar1.ProdPlan</div>
+					<div class="count">@Model.Sar1.ProdPlan.ToString("N0", System.Globalization.CultureInfo.CurrentCulture)</div>
 					<span class="caption">@Resources.ResourceMnemonic.Tonns</span>
 					<div class="clearfix"></div>
 				</div>
 				<div class="line">
 					<span class="name">@Resources.ResourceMnemonic.ProdFact</span>
-					<div class="count">@Model.Sar1.ProdFact</div>
+					<div class="count">@Model.Sar1.ProdFact.ToString("N0", System.Globalization.CultureInfo.CurrentCulture)</div>
 					<span class="caption">@Resources.ResourceMnemonic.Tonns</span>
 					<div class="clearfix"></div>
 				</div>
 				<div class="line">
 					<span class="name">@Resources.ResourceMnemonic.Shipped</span>
-					<div class="count">@Model.Sar1.Shipped</div>
+					<div class="count">@Model.Sar1.Shipped.ToString("N0", System.Globalization.CultureInfo.CurrentCulture)</div>
 					<span class="caption">@Resources.ResourceMnemonic.Tonns</span>
 					<div class="clearfix"></div>
 				</div>
 				<div class="line">
 					<span class="name">@Resources.ResourceMnemonic.AtStockPiles</span>
 					<div class="count">@if (Model.Sar1.AtStockpile > 0)
-					{@Model.Sar1.AtStockpile }
+					{@Model.Sar1.AtStockpile.ToString("N0", System.Globalization.CultureInfo.CurrentCulture) }
 				else
 				{ <span>0</span>}</div>
 					<span class="caption">@Resources.ResourceMnemonic.Tonns</span>
