--- a/CTS_RoleAdmin/Views/Home/AddEditUser.cshtml
+++ b/CTS_RoleAdmin/Views/Home/AddEditUser.cshtml
@@ -6,18 +6,20 @@
 @using (Html.BeginForm("AddEditUser", "Home", FormMethod.Post))
 {
     @Html.AntiForgeryToken()
-    <div class="form-horizontal">
+<div class="form-horizontal">
+    @Html.HiddenFor(m => Model.UserLogin)
+    @Html.HiddenFor(m => Model.UserDomain)
+    @foreach (var role in Model.CtsRoles)
+    {
 
-        @foreach (var role in Model.CtsRoles)
-        {
         <div class="form-group">
-            <input type="checkbox" name="role.Value" value="true" checked="@role.Value">
-            <label>@role.Key.RoleName</label>
+            <input type="checkbox" name='@("CtsRoles[" + role.Key + "]")' value='True' checked="@role.Value">
+            <label>@role.Key</label>
         </div>
-        }
+    }
 
-        <input type="submit" value="Сохранить" class="btn btn-primary" />
-    </div>
+    <input type="submit" value="Сохранить" class="btn btn-primary" />
+</div>
 }
 
 
