Role admin + Analytics fix

--- a/CTS_RoleAdmin/Content/Site.css
+++ b/CTS_RoleAdmin/Content/Site.css
@@ -10,3 +10,13 @@
         transform: rotate(180deg);
         white-space: nowrap;
     }
+
+.table > tbody > tr > td,
+.table > tbody > tr > th,
+.table > tfoot > tr > td,
+.table > tfoot > tr > th,
+.table > thead > tr > td,
+.table > thead > tr > th {
+    padding: 5px 5px;
+    text-align: center;
+}
