--- a/CTS_RoleAdmin/Views/Home/_CheckIfUserExistsForm.cshtml
+++ b/CTS_RoleAdmin/Views/Home/_CheckIfUserExistsForm.cshtml
@@ -1,6 +1,6 @@
 ﻿<br />
 <input type="text" id="UserLoginInput" value="Логин пользователя" />
-<input type="button" id="UserLoginBtn" value="Check" data-root="@Url.Content("~/")" />
+<input type="button" id="UserLoginBtn" value="Добавить" data-root="@Url.Content("~/")" />
 <br />
 
 <script>
