--- a/CTS_Analytics/Views/Shared/_FromDateToDate.cshtml
+++ b/CTS_Analytics/Views/Shared/_FromDateToDate.cshtml
@@ -28,11 +28,11 @@
      $(function () {
             $('#datetimepicker2').datetimepicker({
                 locale: '@Resources.ResourceGeneral.CurrentLang',
-                format: 'DD.MM.YYYY HH:mm'
+                format: 'DD.MM.YYYY'
          });
           $('#datetimepicker1').datetimepicker({
               locale: '@Resources.ResourceGeneral.CurrentLang',
-              format: 'DD.MM.YYYY HH:mm'
+              format: 'DD.MM.YYYY'
              
             });
         });
