--- a/CTS_RoleAdmin/Views/Home/Index.cshtml
+++ b/CTS_RoleAdmin/Views/Home/Index.cshtml
@@ -20,13 +20,18 @@
 <br />
 <div class="row">
 	<div class="col-md-12">
-		<div class="content">
-			<div class="row mines">
-				<div class="col-md-6">
-					<a href='@Url.Action("RoleList")'><i></i>Перейти к управлению ролями</a>
-				</div>
-			</div>
-		</div>
+        <div class="content">
+            <div class="row mines">
+                <div class="col-md-6">
+                    <a href='@Url.Action("MiRoleList")'><i></i>Управление ролями ручного ввода</a>
+                </div>
+            </div>
+            <div class="row mines">
+                <div class="col-md-6">
+                    <a href='@Url.Action("LocationsRoleList")'><i></i>Управлению ролями местонахождений</a>
+                </div>
+            </div>
+        </div>
 	</div>
 </div>
 
