--- a/CTS_RoleAdmin/Views/Home/_CheckIfUserExistsForm.cshtml
+++ b/CTS_RoleAdmin/Views/Home/_CheckIfUserExistsForm.cshtml
@@ -1,5 +1,5 @@
 ﻿<br />
-<input type="text" id="UserLoginInput" value="Логин пользователя" />
+<input type="text" id="UserLoginInput" placeholder="Логин пользователя" />
 <input type="button" id="UserLoginBtn" value="Добавить" data-root="@Url.Content("~/")" />
 <br />
 
