--- a/CTS_RoleAdmin/Views/Home/RoleList.cshtml
+++ b/CTS_RoleAdmin/Views/Home/RoleList.cshtml
@@ -1,4 +1,6 @@
-﻿@model CTS_RoleAdmin.Models.RolesIndexViewModel
+﻿@using CTS_RoleAdmin.HtmlHelpers;
+
+@model CTS_RoleAdmin.Models.RolesIndexViewModel
 
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -6,41 +8,48 @@
 <link href="~/Content/TablePage.css" rel="stylesheet" />
 @{Html.RenderPartial("_CheckIfUserExistsForm");}
 
+@{
+    var qs = HttpUtility.ParseQueryString("");
+    new List<string>(Model.CtsRoles.Select(r=>r.RoleName)).ForEach(s => qs.Add("roles", s));
+}
+
 <table class="table table-striped table-hover table-bordered">
     <thead>
         <tr>
             <th>
                 Пользователь (логин)
             </th>
-            @foreach (var group in Model.AllCtsRoles)
+            @foreach (var group in Model.CtsRoles)
             {
-                <th>
-                    <span>@group.RoleName</span>
-</th>
+            <th>
+                <span>@group.RoleName</span>
+                <span>@Html.GetRoleDescription(group.RoleName)</span>
+            </th>
             }
             <th></th>
         </tr>
     </thead>
     <tbody>
-        @foreach (var user in Model.AllCtsUsers)
+        @foreach (var user in Model.CtsUsers)
         {
             <tr>
                 <td>
                     @user.Login
                 </td>
-                @foreach (var role in Model.AllCtsRoles)
+                @foreach (var role in Model.CtsRoles)
                 {
-                <td>
-                    @if (user.CtsRoles.Contains(role))
-                    {
-                         <span class="glyphicon glyphicon-ok"></span>
-                    }
-                </td>
+                    <td>
+                        @if (user.CtsRoles.Contains(role))
+                        {
+                            <span class="glyphicon glyphicon-ok"></span>
+                        }
+                    </td>
                 }
                 <td style="text-align:center">
                     <div>
                         <span>
-                            <input type="button" name="EditButton" class="btn btn-primary btn-xs" value="Изменить" onclick="location.href='@Url.Action("AddEditUser", "Home", new { userLogin = user.Login, userDomain = user.Domain })'" />
+
+                            <input type="button" name="EditButton" class="btn btn-primary btn-xs" value="Изменить" onclick="location.href='@Url.Action("AddEditUser", "Home", new { userLogin = user.Login, userDomain = user.Domain })&@qs'" />
                         </span>
                         <span>
                             <input type="button" name="DeleteButton" class="btn btn-danger btn-xs" value="Удалить" onclick="ConfirmDelete('@Url.Action("DeleteUser", "Home", new { userLogin = user.Login, userDomain = user.Domain })')" />
